PSARC 2006/162 Extended FILE space for 32-bit Solaris processes 1085341 32-bit stdio routines should support file descriptors >255 6369408 fflush(NULL); will corrupt data written on files in multithreaded apps

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -286,6 +286,7 @@ COMMON_SUBDIRS = \
 	lib/abi \
 	lib/auditd_plugins \
 	lib/crypt_modules \
+	lib/extendedFILE \
 	lib/libadt_jni \
 	lib/libaio \
 	lib/libavl \
