--- a/usr/src/lib/extendedFILE/spec/Makefile
+++ b/usr/src/lib/extendedFILE/spec/Makefile
@@ -18,29 +18,42 @@
 #
 # CDDL HEADER END
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
 
-PROG= strchg strconf
+i386_ARCHITECTURES =	i386
+sparc_ARCHITECTURES =	sparc
 
-include ../../Makefile.cmd
-
-OWNER= root
-GROUP= root
+all		:=	TARGET= all
+install		:=	TARGET= install
+clean		:=	TARGET= clean
+clobber		:=	TARGET= clobber
+lint		:=	TARGET= lint
 
 .KEEP_STATE:
 
-all: $(PROG)
+all install clean clobber: $($(MACH)_ARCHITECTURES)
 
-install: all $(ROOTPROG)
+$($(MACH)_ARCHITECTURES): FRC
+	@cd $@; pwd; $(MAKE) $(TARGET)
 
-clean:
+#
+# This will make sure that any target not
+# explicitly defined will not break the build.
+#
+# XXX pmake on intel does not like the following rules
+# %: ignore_and_exit_quietly
+# ignore_and_exit_quietly:
+#
+# So here it is manually
+#
+IGNORE=		_msg catalog install_h delete \
+		package tcov debug private_h \
+		check analyse test dynamic lint
+$(IGNORE):
 
-lint:
-	$(LINT.c) strchg.c $(LDLIBS)
-	$(LINT.c) strconf.c $(LDLIBS)
-
-include ../../Makefile.targ
+FRC:
