--- a/usr/src/cmd/prtfru/Makefile
+++ b/usr/src/cmd/prtfru/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -38,7 +37,7 @@ CFLAGS    += $(CCVERBOSE)
 CPPFLAGS  += -I$(SRC)/lib/libfru/include \
              -I$(SRC)/lib/libfruutils
 LINTFLAGS += -u
-LDLIBS    += -lfru -lfrureg -lfruutils
+EXTRA_LDLIBS    = -lfru -lfrureg -lfruutils
 
 FILEMODE = 755
 OWNER    = root
@@ -49,7 +48,7 @@ GROUP    = bin
 all: $(PROG)
 
 $(PROG): $(OBJS)
-	$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
+	$(LINK.c) -o $@ $(OBJS) $(LDLIBS) $(EXTRA_LDLIBS)
 	$(POST_PROCESS)
 
 install: all $(ROOTUSRSBIN) $(ROOTUSRSBINPROG)
@@ -57,7 +56,6 @@ install: all $(ROOTUSRSBIN) $(ROOTUSRSBINPROG)
 $(ROOTUSRSBIN):
 	$(INS.dir)
 
-lint := LDLIBS =
 lint: lint_SRCS
 
 POFILE  = $(PROG)_msg.po
