--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -269,8 +269,8 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioens
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioixp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bmc
-$(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= bscbus
-$(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= bscv
+$(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bscbus
+$(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bscv
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= elxl
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= iprb
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= memtest
