--- a/usr/src/cmd/picl/plugins/sun4u/boston/devtree/picl_asr.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/boston/devtree/picl_asr.conf
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,90 +29,162 @@
 #
 # Platform specific .conf file for ASR
 #
-dimm0	memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=0
-dimm0	memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm0	memory-module		unused		/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=1
+# 
+# key = net                   /pci@1e,600000/pci@0/pci@1/pci@0/@4
+# key = ide                   /pci@1f,700000/pci@0/pci@1/pci@0/@1f
+# key = usb                   /pci@1f,700000/pci@0/pci@1/pci@0/@1c
+# key = pci7                  /pci@1f,700000/pci@0/@9
+# key = pci6                  /pci@1e,600000/pci@0/@9
+# key = pci5                  /pci@1f,700000/pci@0/pci@2/pci@0/@8
+# key = pci4                  /pci@1f,700000/pci@0/pci@2/pci@0/@8
+# key = pci3                  /pci@1e,600000/pci@0/pci@1/pci@0/@8
+# key = pci2                  /pci@1e,600000/pci@0/pci@1/pci@0/@8
+# key = pci1                  /pci@1f,700000/pci@0/@8
+# key = pci0                  /pci@1e,600000/pci@0/@8
+# key = cpu3-bank3
+# key = cpu3-bank2
+# key = cpu3-bank1
+# key = cpu3-bank0
+# key = cpu2-bank3
+# key = cpu2-bank2
+# key = cpu2-bank1
+# key = cpu2-bank0
+# key = cpu1-bank3
+# key = cpu1-bank2
+# key = cpu1-bank1
+# key = cpu1-bank0
+# key = cpu0-bank3
+# key = cpu0-bank2
+# key = cpu0-bank1
+# key = cpu0-bank0
+# 
+# V445 may have two pairs of DIMM's on each CPU module.  The DIMM's
+# operate in pairs.  If one DIMM is disabled then the other
+# DIMM in the pair will be marked as "unused".
+#
+# key		class			status		path
+# 					DeviceID
+#
+cpu0-bank0	memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=0
+cpu0-bank0	memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu0-bank0	memory-module		unused		/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu0-bank1	memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=0
+cpu0-bank1	memory-module		unused		/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu0-bank1	memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm1   memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=0
-dimm1   memory-module		unused		/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm1   memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu0-bank2	memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=1
+cpu0-bank2	memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu0-bank2	memory-module		unused		/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu0-bank3	memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=1
+cpu0-bank3	memory-module		unused		/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu0-bank3	memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm2   memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=1
-dimm2   memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm2   memory-module		unused		/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm3   memory-module-group	unused		/memory-controller@0,0/memory-module-group			I?ID=1
-dimm3   memory-module		unused		/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm3   memory-module		disabled	/memory-controller@0,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu1-bank0	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=0
+cpu1-bank0	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu1-bank0	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu1-bank1	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=0
+cpu1-bank1	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu1-bank1	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm4	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=0
-dimm4	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm4	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu1-bank2	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=1
+cpu1-bank2	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu1-bank2	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu1-bank3	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=1
+cpu1-bank3	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu1-bank3	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm5	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=0
-dimm5	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm5	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm6	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=1
-dimm6	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm6	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu2-bank0	memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=0
+cpu2-bank0	memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu2-bank0	memory-module		unused		/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu2-bank1	memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=0
+cpu2-bank1	memory-module		unused		/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu2-bank1	memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm7	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=1
-dimm7	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm7	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu2-bank2	memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=1
+cpu2-bank2	memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu2-bank2	memory-module		unused		/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu2-bank3	memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=1
+cpu2-bank3	memory-module		unused		/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu2-bank3	memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm8	memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=0
-dimm8	memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm8	memory-module		unused		/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm9   memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=0
-dimm9   memory-module		unused		/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm9   memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu3-bank0	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=0
+cpu3-bank0	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu3-bank0	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=1
+cpu3-bank1	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=0
+cpu3-bank1	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=0
+cpu3-bank1	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=1
 
-dimm10   memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=1
-dimm10   memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm10   memory-module		unused		/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu3-bank2	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=1
+cpu3-bank2	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu3-bank2	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=1
+cpu3-bank3	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=1
+cpu3-bank3	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=0
+cpu3-bank3	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm11   memory-module-group	unused		/memory-controller@2,0/memory-module-group			I?ID=1
-dimm11   memory-module		unused		/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm11   memory-module		disabled	/memory-controller@2,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-dimm12	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=0
-dimm12	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm12	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=1
+#
+# PCI0, PCI1, PCI6, and PCI7 are Express slots, each may be
+# disabled individually.
+#
+# PCI2 and PCI3 are PCI/PCI-X slots downstream of the first Broadcom
+# BCM5714 bridge (Fire leaf A).  These cannot be disabled individually,
+# they can be disabled only as a pair.  Same for PCI4 and PCI5 off of
+# Fire Leaf B: these are PCI-X/PCI slots downstream of the other BCM 5714.
+#
+# key	class	status		path				DeviceID
+#
+pci0	picl	disabled	/pci@1e,600000/pci@0/unknown@8	I?DeviceID=8
+pci1	picl	disabled	/pci@1f,700000/pci@0/unknown@8	I?DeviceID=8
+pci6	picl	disabled	/pci@1e,600000/pci@0/unknown@9	I?DeviceID=9
+pci7	picl	disabled	/pci@1f,700000/pci@0/unknown@9	I?DeviceID=9
 
-dimm13	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=0
-dimm13	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=0
-dimm13	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=0/memory-module	I?ID=1
+# key	class	status		path
+#	DeviceID
+pci2	picl	disabled	/pci@1e,600000/pci@0/pci@1/pci@0/unknown@8	I?DeviceID=8
+pci2	picl	unused		/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@1	I?DeviceID=1
+pci2	picl	unused		/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@2	I?DeviceID=2
+pci3	picl	disabled	/pci@1e,600000/pci@0/pci@1/pci@0/unknown@8	I?DeviceID=8
+pci3	picl	unused		/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@1	I?DeviceID=1
+pci3	picl	unused		/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@2	I?DeviceID=2
 
-dimm14	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=1
-dimm14	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm14	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=1
+pci4	picl	disabled	/pci@1f,700000/pci@0/pci@2/pci@0/unknown@8	I?DeviceID=8
+pci4	picl	unused		/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@1	I?DeviceID=1
+pci4	picl	unused		/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@2	I?DeviceID=2
+pci5	picl	disabled	/pci@1f,700000/pci@0/pci@2/pci@0/unknown@8	I?DeviceID=8
+pci5	picl	unused		/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@1	I?DeviceID=1
+pci5	picl	unused		/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@2	I?DeviceID=2
 
-dimm15	memory-module-group	unused		/memory-controller@3,0/memory-module-group			I?ID=1
-dimm15	memory-module		unused		/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=0
-dimm15	memory-module		disabled	/memory-controller@3,0/memory-module-group?ID=1/memory-module	I?ID=1
 
-pci0	picl			disabled	/pci@1f,700000/pci@0/pci@9/unknown@0				I?DeviceID=0
-pci0	picl			disabled	/pci@1e,600000/pci@0/pci@9/unknown@0				I?DeviceID=0
-pci1	picl			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@1			I?DeviceID=1
-pci1	picl			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/pci@8/unknown@2			I?DeviceID=2
-pci1	picl			disabled	/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@1			I?DeviceID=1
-pci2	picl			disabled	/pci@1f,700000/pci@0/pci@2/pci@0/pci@8/unknown@2			I?DeviceID=2
-pci2	picl			disabled	/pci@1f,700000/pci@0/pci@8/unknown@0				I?DeviceID=0
-pci3	picl			disabled	/pci@1e,600000/pci@0/pci@8/unknown@0				I?DeviceID=0
+#
+# These are on-board devices.  The IDE interface runs the CD/DVD drive.
+# Disabling USB will disable all four ports.  The network ports may be
+# diabled only in pairs.
+#
+# key	class	status		path
+#	DeviceID
+#
+ide	ide	disabled	/pci@1f,700000/pci@0/pci@1/pci@0/pci@0/ide@1f	I?DeviceID=1f
 
-ide	ide			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/pci@0/ide@1f				I?DeviceID=1f
+usb  	usb	disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c	I?DeviceID=1c
+usb  	usb	unused		/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,1	I?DeviceID=1c,1
+usb  	usb	unused		/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,2	I?DeviceID=1c,2
+usb  	usb	unused		/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,3	I?DeviceID=1c,3
 
-usb  	usb			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c				I?DeviceID=1c
-usb 	usb			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,1			I?DeviceID=1c,1
-usb 	usb			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,3			I?DeviceID=1c,3
-usb 	usb			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,2/hub@7			I?DeviceID=3
-usb 	usb			disabled	/pci@1f,700000/pci@0/pci@1/pci@0/usb@1c,3/hub@7			I?DeviceID=3
+net	network	disabled	/pci@1e,600000/pci@0/pci@1/pci@0/network@4	I?DeviceID=4
+net	network	unused		/pci@1e,600000/pci@0/pci@1/pci@0/network@4,1	I?DeviceID=4,1
+net0&1	network	disabled	/pci@1e,600000/pci@0/pci@1/pci@0/network@4	I?DeviceID=4
+net0&1	network	unused		/pci@1e,600000/pci@0/pci@1/pci@0/network@4,1	I?DeviceID=4,1
+net2&3	network	disabled	/pci@1f,700000/pci@0/pci@2/pci@0/network@4	I?DeviceID=4
+net2&3	network	unused		/pci@1f,700000/pci@0/pci@2/pci@0/network@4,1	I?DeviceID=4,1
 
-net0&1	network			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/network@4			I?DeviceID=2
-net0&1	network			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/network@4,1			I?DeviceID=2
-net2&3	network			disabled	/pci@1f,700000/pci@0/pci@2/pci@0/network@4			I?DeviceID=2
-net2&3	network			disabled	/pci@1f,700000/pci@0/pci@2/pci@0/network@4,1			I?DeviceID=2
-
-scsi	scsi-2 			disabled	/pci@1e,600000/pci@0/pci@2/scsi@0			I?DeviceID=2
+#
+# This is the built-in SAS interface; it does not control the
+# SAS interface in slot PCI4.
+#
+# key	class	status		path
+# DeviceID
+#
+scsi	scsi-2	disabled	/pci@1e,600000/pci@0/pci@2/scsi@0	I?DeviceID=0
