--- a/usr/src/cmd/fm/eversholt/files/i386/Makefile
+++ b/usr/src/cmd/fm/eversholt/files/i386/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -26,7 +25,7 @@
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 SUBDIRS=i86pc
-EFT_COMMON_FILES= pci.eft sca500.eft sca1000.eft
+EFT_COMMON_FILES= pci.eft pciex.eft sca500.eft sca1000.eft
 
 include ../../../Makefile.subdirs
 
