PSARC 2006/153 Zones ZFS Integration 6383119 RFE: add support for using zfs clones when cloning a zone 6405233 attaching a zone to a system with multiple versions of a patch with one version higher succeeds 6365776 zoneadm uninstall doesn't remove <zonepath>/lu 6400688 Cannot clone a zone with AF_UNIX sockets

--- a/usr/src/cmd/zoneadm/Makefile
+++ b/usr/src/cmd/zoneadm/Makefile
@@ -38,19 +38,32 @@ $(ROOTMANIFEST)         := FILEMODE= 444
 $(ROOTMANIFESTDIR)/%: %
 	$(INS.file)
 
+OBJS= zoneadm.o sw_cmp.o zfs.o
+SRCS = $(OBJS:.o=.c)
+POFILE=zoneadm_all.po
+POFILES= $(OBJS:%.o=%.po)
+
 LDLIBS += -lzonecfg -lsocket -lgen -lpool -lbsm -lzfs
 
 .KEEP_STATE:
 
 all: $(PROG)
 
+$(PROG): $(OBJS)
+	$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
+	$(POST_PROCESS)
+
 install: all $(ROOTUSRSBINPROG) $(ROOTMANIFEST) $(ROOTMETHOD)
 
 check:	$(PROG).c $(CHKMANIFEST)
-	$(CSTYLE) -pP $(PROG).c
+	$(CSTYLE) -pP $(SRCS:%=%)
+
+$(POFILE): $(POFILES)
+	$(RM) $@
+	$(CAT) $(POFILES) > $@
 
 clean:
 
-lint:	lint_PROG
+lint:	lint_SRCS
 
 include ../Makefile.targ
