PSARC 2005/706 SIGEV_THREAD and SIGEV_PORT 4017841 The SIGEV_THREAD option for event notification not implemented

--- a/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/event-transport/Makefile
+++ b/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/event-transport/Makefile
@@ -30,7 +30,7 @@ $(PLATFORMS)_SRCS = ex_dscp.c
 
 LIBDIRS = $(ROOT)/usr/platform/$(PLATFORMS)/lib
 LIBFLAGS = \$$ORIGIN/../../../../lib
-XPORTLIBS = -lsocket -lnsl -ldscp
+XPORTLIBS = -lsocket -lnsl -ldscp -lrt
 
 include ../../common/event-transport/Makefile.etm
 
