6393267 Need a libtopo enumerator for OPL

--- a/usr/src/lib/fm/topo/modules/SUNW,SPARC-Enterprise/Makefile
+++ b/usr/src/lib/fm/topo/modules/SUNW,SPARC-Enterprise/Makefile
@@ -25,15 +25,8 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS =	sun4u \
-		sun4v \
-		SUNW,Sun-Fire \
-		SUNW,Sun-Fire-T200 \
-		SUNW,Sun-Fire-15000 \
-		SUNW,SPARC-Enterprise
+SUBDIRS = ioboard
 
-i386_SUBDIRS = i86pc
+.PARALLEL: $(SUBDIRS)
 
-SUBDIRS = $($(MACH)_SUBDIRS)
-
-include ../../Makefile.subdirs
+include ../../../Makefile.subdirs
