--- a/usr/src/lib/fm/topo/modules/Makefile
+++ b/usr/src/lib/fm/topo/modules/Makefile
@@ -25,7 +25,12 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 
-sparc_SUBDIRS = sun4u sun4v SUNW,Sun-Fire SUNW,Sun-Fire-15000
+sparc_SUBDIRS =	sun4u \
+		sun4v \
+		SUNW,Sun-Fire \
+		SUNW,Sun-Fire-15000 \
+		SUNW,SPARC-Enterprise
+
 i386_SUBDIRS = i86pc
 
 SUBDIRS = $($(MACH)_SUBDIRS)
