6415415 jvm dumps core on OPL using 32M pages

--- a/usr/src/uts/sun4u/opl/Makefile.opl
+++ b/usr/src/uts/sun4u/opl/Makefile.opl
@@ -146,6 +146,7 @@ MACHINE_DEFS	+= -D_OPL
 MACHINE_DEFS    += -DOLYMPUS_SHARED_FTLB
 MACHINE_DEFS	+= -D_CMP_NO_ERROR_STEERING -D_HW_MEMSCRUB_SUPPORT
 MACHINE_DEFS	+= -DDO_CORELEVEL_LOADBAL
+MACHINE_DEFS	+= -DITLB_32M_256M_SUPPORT
 #
 # OLYMPUS C cross-call erratas.
 #  - revision A can only deliver one xcall at a time.
