6409768 Need a means of enumerating topology beneath PCI functions 6419903 fix for 6393267 breaks sparc plain-PCI topology enumeration

--- a/usr/src/lib/fm/topo/modules/i86pc/pcibus/Makefile
+++ b/usr/src/lib/fm/topo/modules/i86pc/pcibus/Makefile
@@ -29,7 +29,14 @@
 MODULE = pcibus
 ARCH = i86pc
 CLASS = arch
-PCISRCS = pcibus.c did.c did_hash.c did_props.c util.c pcibus_labels.c
+PCISRCS = did.c			\
+	  did_hash.c		\
+	  did_props.c		\
+	  pcibus.c		\
+	  pcibus_labels.c	\
+	  pcifn_enum.c		\
+	  util.c
+
 MODULESRCS = $(PCISRCS) pci_i86pc.c
 
 include ../../Makefile.plugin
