6406491 PICL plugins need to be updated to support 2UEXL-I riser card changes

--- a/usr/src/cmd/picl/plugins/sun4u/seattle/devtree/picl_asr.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/seattle/devtree/picl_asr.conf
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
@@ -56,13 +56,23 @@ dimm6	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/mem
 dimm7	memory-module-group	unused		/memory-controller@1,0/memory-module-group			I?ID=1
 dimm7	memory-module		unused		/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=0
 dimm7	memory-module		disabled	/memory-controller@1,0/memory-module-group?ID=1/memory-module	I?ID=1
-pci0	picl			disabled	/pci@1e,600000/pci@0/unknown@8					I?DeviceID=8
-pci1	picl			disabled	/pci@1e,600000/pci@0/pci@9/pci@0/unknown@8			I?DeviceID=8
+
+# PCI0: 1UEER/2UEER
+pci0	picl			disabled	/pci@1e,600000/pci@0/pci@8/unknown@0				I?DeviceID=0
+
+# PCI1: 1UXXL, 1UEEL, 2UEXL-I, 2UEEL
+pci1	picl			disabled	/pci@1e,600000/pci@0/pci@9/pci@0/pci@8/unknown@1		I?DeviceID=1
 pci1	picl			disabled	/pci@1f,700000/unknown@0 					I?DeviceID=0
-pci1	picl			disabled	/pci@1f,700000/pci@0/unknown@8 					I?DeviceID=8
-pci2	picl			disabled	/pci@1e,600000/pci@0/unknown@2					I?DeviceID=2
+pci1	picl			disabled	/pci@1f,700000/pci@0,2/unknown@1				I?DeviceID=1
+pci1	picl			disabled	/pci@1f,700000/pci@0/pci@9/unknown@0				I?DeviceID=0
+
+# PCI2: 2UEER
+pci2	picl			disabled	/pci@1e,600000/pci@0/pci@2/unknown@0				I?DeviceID=0
+
+# PCI3: 2UEXL-I, 2UEEL
 pci3	picl			disabled	/pci@1f,700000/pci@0/unknown@2					I?DeviceID=2
-pci3	picl			disabled	/pci@1f,700000/pci@0/unknown@9					I?DeviceID=9
+pci3	picl			disabled	/pci@1f,700000/pci@0/pci@8/unknown@0				I?DeviceID=0
+
 riser-left	picl		disabled	/pci@1f,700000/unknown@0 					I?DeviceID=0
 ide	ide			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/ide@1f				I?DeviceID=1f
 usb  	usb			disabled	/pci@1e,600000/pci@0/pci@1/pci@0/usb@1c				I?DeviceID=1c
