PSARC 2006/187 Montoya (SUNW,Netra-CP3060) 6372661 need Montoya platform boot support in Solaris ON 6395675 uata driver needs to support the ide in ULI 1575

--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -66,7 +66,7 @@ PSMBASE		 = $(UTSBASE)/../psm
 #IMPLEMENTED_PLATFORM	= 
 #PLATFORMS                = $(IMPLEMENTED_PLATFORM)
 
-IMPLEMENTATIONS		= ontario
+IMPLEMENTATIONS		= ontario montoya
 
 #ROOT_PLAT_DIRS		= $(PLATFORMS:%=$(ROOT_PLAT_DIR)/%)
 #USR_PLAT_DIRS		= $(PLATFORMS:%=$(USR_PLAT_DIR)/%)
