--- a/usr/src/uts/i86pc/amd_opteron/Makefile
+++ b/usr/src/uts/i86pc/amd_opteron/Makefile
@@ -1,9 +1,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -67,6 +66,7 @@ INSTALL_TARGET  = $(BINARY) $(ROOTMODULE)
 CLEANFILES	+= $(AO_MCA_DISP_C)
 CPPFLAGS	+= -I$(SRCDIR) -I$(OBJS_DIR)
 ASFLAGS		+= -I$(SRCDIR) -I$(OBJS_DIR)
+LDFLAGS		+= -dy -N misc/acpica
 
 #
 #       Default build targets.
