--- a/usr/src/cmd/file/Makefile
+++ b/usr/src/cmd/file/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -31,6 +30,7 @@ XPG4PROG= file
 MAGIC= magic
 
 ELFCAP=	$(SRC)/common/elfcap
+SGSRTCID=	$(SRC)/common/sgsrtcid
 
 LOBJS=	file.o magicutils.o
 OBJS=	$(LOBJS) elfcap.o
@@ -43,7 +43,7 @@ POFILE= file_all.po
 POFILES= $(LOBJS:%.o=%.po)
 
 LDLIBS += -lelf
-CPPFLAGS += -DCAP_UPPERCASE -I$(ELFCAP)
+CPPFLAGS += -DCAP_UPPERCASE -I$(ELFCAP) -I$(SGSRTCID)
 $(XPG4) := CFLAGS += -DXPG4
 
 ROOTETCMAGIC= $(MAGIC:%=$(ROOTETC)/%)
