--- a/usr/src/uts/i86pc/ml/offsets.in
+++ b/usr/src/uts/i86pc/ml/offsets.in
@@ -5,9 +5,8 @@
 \ CDDL HEADER START
 \
 \ The contents of this file are subject to the terms of the
-\ Common Development and Distribution License, Version 1.0 only
-\ (the "License").  You may not use this file except in compliance
-\ with the License.
+\ Common Development and Distribution License (the "License").
+\ You may not use this file except in compliance with the License.
 \
 \ You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 \ or http://www.opensolaris.org/os/licensing.
@@ -290,8 +289,6 @@ rm_platter
 cpu_tables
 	ct_stack
 	ct_gdt
-
-\#define	DEFAULTSTKSZ	_CONST(CT_GDT - CT_STACK)
 
 ddi_acc_impl
 	ahi_acc_attr	ACC_ATTR
