--- a/usr/src/uts/intel/sys/Makefile
+++ b/usr/src/uts/intel/sys/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -98,13 +97,7 @@ CLOSEDHDRS = \
 	sbpro.h
 
 SUBHDRS	=			\
-	dktp/cdtypes.h		\
-	dktp/mscsi.h		\
-	dktp/scdk.h		\
-	dktp/scdkwatch.h	\
-	dktp/sctarget.h		\
-	dktp/tgcd.h		\
-	dktp/tgpassthru.h
+	dktp/mscsi.h
 
 FSHDRS =			\
 	seg_xmem.h		\
