PSARC 2006/221 /dev/bmc interface upgrade PSARC 2006/322 FMA for Sun Fire X4500 SATA Disks 6414182 bmc_intf.h should be shareable with ON 6416735 Sun Fire X4500 systems need a disk diagnosis engine 6419218 Need a way of enumerating sata disks on the Sun Fire X4500 6419771 memory leak from sata.so.1`setup_for_devctl_cmd+0x20 6421449 fmtopo failure paths do not clean up properly 6421627 use after free in topo_tree_destroy causes unpredictable behavior 6421650 topo_modhash_load does not observe proper locking; deadlock ensues 6421659 topo modules' use of global variables causes unpredictable behavior during concurrent usage 6422221 race to populate _topo_* globals causes libumem to abort process 6423975 cfgadm sata plugin wastes tons of time using libdevinfo 6424520 fmd should remove faulty resources from the R$ when they are removed 6424523 hc scheme should do more homework before pronouncing a resource present 6425600 fmd can deadlock when aux threads call fmd_xprt_post at fmd shutdown time 6426514 topo_fmri_compare compares the same scheme leading to erroneous compare results

--- a/usr/src/cmd/fm/modules/Makefile
+++ b/usr/src/cmd/fm/modules/Makefile
@@ -25,7 +25,7 @@
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 sparc_SUBDIRS = sun4u sun4v SUNW,SPARC-Enterprise
-i386_SUBDIRS =
+i386_SUBDIRS = i86pc
 
 SUBDIRS = common $($(MACH)_SUBDIRS)
 
