--- a/usr/src/cmd/fm/schemes/hc/sparc/Makefile
+++ b/usr/src/cmd/fm/schemes/hc/sparc/Makefile
@@ -29,4 +29,8 @@
 include ../../Makefile.com
 include ../../Makefile.targ
 
+LDLIBS += -ltopo
+LDFLAGS += -L$(ROOT)/usr/lib/fm -R/usr/lib/fm
+LINTFLAGS += -L$(ROOT)/usr/lib/fm
+
 install: all $(ROOTPROG)
