--- a/usr/src/lib/cfgadm_plugins/sata/amd64/Makefile
+++ b/usr/src/lib/cfgadm_plugins/sata/amd64/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,6 +29,8 @@
 MAPDIR= ../spec/amd64
 include ../Makefile.com
 include ../../../Makefile.lib.64
+CFLAGS += -D_POSIX_PTHREAD_SEMANTICS
+LINTFLAGS += -D_POSIX_PTHREAD_SEMANTICS
 
 .KEEP_STATE:
 
