PSARC 2006/281 OPL HP Daemon 6369763 OPL Solaris - OPL specific FMA PCI Hotplug Daemon

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -450,6 +450,7 @@ sparc_SUBDIRS=		\
 	cvcd		\
 	dcs		\
 	fruadm		\
+	oplhpd		\
 	prtdscp		\
 	prtfru		\
 	scadm		\
@@ -757,6 +758,7 @@ MANIFEST_TOPDIRS=			\
 	keyserv				\
 	ldapcachemgr			\
 	nscd				\
+	oplhpd				\
 	power				\
 	rexd				\
 	rpcbind				\
