FWARC 2005/367 sun4v watchdog service API FWARC 2006/093 sun4v watchdog API update 6354584 Add watchdog timer support in sun4v

--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -78,6 +78,7 @@ CORE_OBJS +=	promif_test.o
 CORE_OBJS +=	promif_version.o
 CORE_OBJS +=	sfmmu_kdi.o
 CORE_OBJS +=	swtch.o
+CORE_OBJS +=	wdt.o
 CORE_OBJS +=	xhat_sfmmu.o
 
 CORE_OBJS +=	mdesc_diff.o
