--- a/usr/src/lib/libc/sparc/Makefile
+++ b/usr/src/lib/libc/sparc/Makefile
@@ -873,6 +873,8 @@ PORTREGEX=			\
 	regex.o			\
 	wordexp.o
 
+VALUES=	values-Xa.o
+
 MOSTOBJS=			\
 	$(STRETS)		\
 	$(CRTOBJS)		\
@@ -905,7 +907,8 @@ MOSTOBJS=			\
 	$(COMSYSOBJS)		\
 	$(SYSOBJS)		\
 	$(COMSYSOBJS64)		\
-	$(SYSOBJS64)
+	$(SYSOBJS64)		\
+	$(VALUES)
 
 TRACEOBJS=			\
 	plockstat.o
@@ -956,7 +959,7 @@ MAPFILE=	$(MAPDIR)/mapfile
 CFLAGS +=	$(EXTN_CFLAGS)
 CPPFLAGS=	-D_REENTRANT -Dsparc $(EXTN_CPPFLAGS) \
 		-I$(LIBCBASE)/inc -I../inc $(CPPFLAGS.master)
-ASFLAGS=	-K pic -P -D__STDC__ -D_ASM $(CPPFLAGS) -xarch=v8plus
+ASFLAGS=	-K pic -P -D__STDC__ -D_ASM $(CPPFLAGS) $(sparc_AS_XARCH)
 
 # Inform the run-time linker about libc specialized initialization
 RTLDINFO =	-z rtldinfo=tls_rtldinfo
@@ -986,7 +989,6 @@ CLEANFILES=			\
 	pics/_rtbootld.o	\
 	pics/crti.o		\
 	pics/crtn.o		\
-	pics/values-Xa.o	\
 	$(ALTPICS)
 
 CLOBBERFILES +=	$(MAPFILE) $(LIB_PIC)
@@ -1021,7 +1023,7 @@ SRCS=							\
 
 # conditional assignments
 $(DYNLIB) $(LIB_PIC) := DYNOBJS = _rtbootld.o
-$(DYNLIB) := CRTI = crti.o values-Xa.o
+$(DYNLIB) := CRTI = crti.o
 $(DYNLIB) := CRTN = crtn.o
 
 $(DYNLIB):	$(MAPFILE)
@@ -1144,10 +1146,6 @@ lint	:=	LINTFLAGS += -mn
 lint:
 	@echo $(LINT.c) ... $(LDLIBS)
 	@$(LINT.c) $(SRCS) $(LDLIBS)
-
-# these aren't listed as $(PICS), so we need to force CTF
-pics/values-Xa.o := CFLAGS += $(CTF_FLAGS)
-pics/values-Xa.o := CTFCONVERT_POST = $(CTFCONVERT_O)
 
 $(LINTLIB):= SRCS=../port/llib-lc
 $(LINTLIB):= CPPFLAGS += -D_MSE_INT_H
